trying to fix spacing on the submit button and labels

--- a/style.less
+++ b/style.less
@@ -107,7 +107,7 @@ hr {
     text-indent: 16px;
 }
 
-.form {
+.form-group {
     margin: 0 auto;
     width: 35%;
     height: 350px;
@@ -122,12 +122,11 @@ hr {
     }
 
     label {
-    display: block;
+    display: inline-block;
     width: 90px;
     color: white;
     font-size: 0.75em;
-    padding-left: 12.5em;
-    text-align: left;
+    background-color: @main-color;
     }
 
     input, textarea {
@@ -162,7 +161,7 @@ hr {
     color: #a3c5cf; 
     height: 2em;
     background-color: white;
-    padding: 0;
+    padding-top: 3em;
     border: 1px solid grey;
     .border-radius;
     font-size: 100%;
